# brain-games-python

./: .gitignore  README.md  poetry  pyproject.toml
brain_games/: engine.py
brain_games/games/: brain_even.py
brain_games/scripts/: brain_even.py  brain_games.py
