[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain games"
authors = ["Dmitry Nikolaev"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
brain-even = "brain_games.scripts.brain_even:main"
